--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Auto Refresh on Idle",
+  "name": "Auto Refresh Chrome Extension",
   "version": "1.0",
   "description": "Auto refresh page after user defined interval or inactivity.",
   "author": "Arghya Polley",
