--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,21 @@
 {
-    "manifest_version": 3,
-    "name": "Auto Refresh on Idle",
-    "version": "1.0",
-    "description": "Auto-refresh page after 1 minute of user inactivity.",
-    "permissions": ["scripting", "tabs"],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"]
-      }
-    ],
-    "action": {
-      "default_title": "Auto Refresh on Idle"
+  "manifest_version": 3,
+  "name": "Auto Refresh on Idle",
+  "version": "1.0",
+  "description": "Auto refresh page after user defined interval or inactivity.",
+  "author": "Arghya Polley",
+  "permissions": ["scripting", "tabs", "storage"],
+  "action": {
+    "default_title": "Auto Refresh on Idle",
+    "default_popup": "popup.html"
+  },
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
     }
-  }
-  
+  ]
+}
